feat: Add is_reachable field in json (#63)
* feat: Add is_reachable field in json

* Clippy

* Add is_reachable to openapi

* Update packages

* Bump to 0.2.0

* Fix tests
